# emi_web

./: Cargo.toml  output.txt  resize.txt
assets/: index.html  index.js
assets/css/: main.css
assets/js/: index.js
src/: lib.rs  main copy.rs  main.rs  parse_frame.rs  tui.rs  tui_2.rs
temp/: 037d6f8b-e3f1-42e6-ba3b-ba30a47f47eb.output  71e16eae-a7cf-4a50-bdaf-df8f19edd7b7.output
