[package]
name = "webbackendtui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["ws","macros"]}
serde = {version = "1.0.215", features =["derive"]}
tokio = { version = "1.42.0", features = ["full"] }
tower-http = {version = "0.6.2", features = ["fs"]}
serde_json = "1.0.93"

color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = {version = "0.29.0", features = ['widget-calendar']}
futures = "0.3"
uuid = "1.11.0"
regex = "1.11.1"
